# ridedott-pmc-hackathon

./: .gitignore  .pre-commit-config.yaml  README.md  scraper.ipynb
assets/: language_data.json  parse_google_language_table.ipynb  view-source_https___cloud.google.com_speech-to-text_v2_docs_speech-to-text-supported-languages.html
ridedott-pmc-hackathon/: .env  .pre-commit-config.yaml  Add_doc_to_vec_db.ipynb  README.md  pyproject.toml
ridedott-pmc-hackathon/cloud_functions/: test_function.py
ridedott-pmc-hackathon/input_data/audio/: AUDIO4.m4a
ridedott-pmc-hackathon/input_data/instructions/text/: anesthesia.txt  fertility-preservation-in-girls.txt  high_grade_glioma.txt
ridedott-pmc-hackathon/input_data/messages/client_questions/: fake_question_glioma.txt
ridedott-pmc-hackathon/ridedott_pmc_hackathon/: answer_question_using_context.py  audio_to_text.py  constants.py  generate_project_diagram.py  get_context_vectordb.py  old_cf.py  parse_audio.py  parse_pdf.py  parse_secrets.py  prompts.py
ridedott-pmc-hackathon/ridedott_pmc_hackathon/dashapp/: __init__.py  app.py
scraper/: scraper.ipynb
vecdb/: Add_doc_to_vec_db.ipynb  Run_Vec_db_query.ipynb  query_vec_db.py
