[tool.poetry]
name = "ridedott-pmc-hackathon"
version = "0.1.0"
description = ""
authors = ["Alexvonrass <alexvonrass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
vertexai = "^1.48.0"
weaviate-client = "^4.5.6"
google-cloud-aiplatform = "^1.48.0"
google-cloud-vision = "^3.7.2"
google-cloud-speech = "^2.26.0"
pytest = "^8.1.1"
pre-commit = "^3.7.0"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
